RESOLVED FIXED82548
[Mac] REGRESSION: Removing translation of local paths in KURL constructor broke some applications
https://bugs.webkit.org/show_bug.cgi?id=82548
Summary [Mac] REGRESSION: Removing translation of local paths in KURL constructor bro...
Alexey Proskuryakov
Reported 2012-03-28 16:29:14 PDT
Attachments
proposed fix (2.50 KB, patch)
2012-03-28 16:35 PDT, Alexey Proskuryakov
beidson: review+
updated with a fix for yet another case (3.36 KB, patch)
2012-03-29 11:51 PDT, Alexey Proskuryakov
beidson: review+
Alexey Proskuryakov
Comment 1 2012-03-28 16:35:13 PDT
Created attachment 134441 [details] proposed fix
Alexey Proskuryakov
Comment 2 2012-03-29 11:51:01 PDT
Created attachment 134632 [details] updated with a fix for yet another case
Alexey Proskuryakov
Comment 3 2012-03-29 11:52:29 PDT
Additionally, <rdar://problem/11142152>.
Alexey Proskuryakov
Comment 4 2012-03-29 13:47:01 PDT
Note You need to log in before you can comment on or make changes to this bug.