        [Mac] REGRESSION: Removing translation of local paths in KURL constructor broke some applications         https://bugs.webkit.org/show_bug.cgi?id=82548         <rdar://problem/11125355>         <rdar://problem/11142152>

Reviewed by Brady Eidson.

        * WebView/WebFrame.mm:
        (-[WebFrame loadRequest:]): Fixed this bug.
        (-[WebFrame loadHTMLString:baseURL:]): Also added translation to another API, so that I don't
        have to come back again.
        (-[WebFrame loadAlternateHTMLString:baseURL:forUnreachableURL:]): Ditto.

        * WebView/WebView.mm: (-[WebView setMainFrameURL:]): Changed another place where clients used
        to pass file paths instead of URLs.



Canonical link: https://commits.webkit.org/99979@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112571 268f45cc-cd09-0410-ab3c-d52691b4dbfc